Refactor the component name
